#pragma once

enum class ButtonType
{
    kRightButton,
    kMiddleButton,
    kLeftButton
};