#pragma once

enum class LogLevel
{
    kInfo,
    kTrace,
    kDebug,
    kError
};